--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -1,6 +1,23 @@
-body {
+.content-container {
+  min-height: calc(98vh - 40px);
+}
+
+.footer--pin {
+  position: relative;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80vh;
+  bottom: 0;
+  width: 100%;
+  flex-shrink: 0;
+  flex-grow: 1;
+}
+
+.footer--pin a {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+  margin-left: 5px;
 }
